--- a/.env_example
+++ b/.env_example
@@ -1,8 +1,8 @@
 NODE_ENV=production # Set to "production" so server serves static assets
-USER_ID={YOUR_USER_ID} # A GUID unique to each user's DocuSign Account, located on the Apps and Keys page.
-API_ACCOUNT_ID={YOUR_API_ACCOUNT_ID} # A GUID unique to each user's DocuSign Account, located on the Apps and Keys page.
-INTEGRATION_KEY={YOUR_APP_INTEGRATION_KEY} # A GUID unique to each application making DocuSign API calls, located on the Apps and Keys page.
-DS_OAUTH_SERVER=https://account-d.docusign.com # The DocuSign authentication server, used for JWT.
+USER_ID={YOUR_USER_ID} # A GUID unique to each user's Docusign Account, located on the Apps and Keys page.
+API_ACCOUNT_ID={YOUR_API_ACCOUNT_ID} # A GUID unique to each user's Docusign Account, located on the Apps and Keys page.
+INTEGRATION_KEY={YOUR_APP_INTEGRATION_KEY} # A GUID unique to each application making Docusign API calls, located on the Apps and Keys page.
+DS_OAUTH_SERVER=https://account-d.docusign.com # The Docusign authentication server, used for JWT.
 SESSION_SECRET={YOUR_SESSION_SECRET} # A unique string of your choice that is used to encrypt the session cookie.
 TARGET_ACCOUNT_ID=false
 REDIRECT_URI_HOME=http://localhost:3000/index # Where the user will be redirected after providing consent for JWT.
