--- a/server/package.json
+++ b/server/package.json
@@ -21,9 +21,10 @@
     "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.10",
     "docusign-esign": "6.3.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0"
   },
