fixes docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,6 @@ services:
       context: ./server
       dockerfile: Dockerfile
     container_name: my-backend
-    ports:
-      - "5000:5000"
     env_file:
       - ./server/.env
     volumes:
@@ -21,13 +19,10 @@ services:
       context: ./client
       dockerfile: Dockerfile
       args:
-        REACT_APP_API_URL: "http://localhost:5000" 
+        REACT_APP_API_URL: "http://backend:5000" 
     container_name: my-frontend
     ports:
       - "3000:80"
-    environment:
-      - REACT_APP_API_URL=http://localhost:5000
-      - REACT_APP_NODE_ENV=development
     depends_on:
       - backend
     env_file:
