fixes docker-compose

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,5 @@
 # Use a Node.js base image for building
-FROM node:20.14 AS builder
+FROM --platform=linux/amd64 node:20.14 AS builder
 
 # Set the working directory
 WORKDIR /app
@@ -21,8 +21,7 @@ ENV REACT_APP_API_URL=$REACT_APP_API_URL
 RUN npm run build
 
 # Use Nginx to serve the frontend build
-FROM nginx:1.23.2-alpine
-COPY --from=builder /app/build /usr/share/nginx/html
-
-# Expose necessary ports
-EXPOSE 80
+FROM --platform=linux/amd64 nginx:1.23.2-alpine
+COPY --from=builder /app/build /var/www/app
+COPY ./infra/nginx/conf/ /etc/nginx/conf.d
+EXPOSE 80 443
